<resources>
    <string name="app_name">SpaceShooter</string>
    <string name="go_to_shop">Go to Shop</string>
    <string name="start_game">Start Game 🎮</string>
    <string name="space_shooter">Space Shooter</string>
    <string name="buy_double_bullet_200_coins">Buy Double Bullet - 200 coins</string>
    <string name="buy_extra_health_150_coins">Buy Extra Health - 150 coins</string>
    <string name="buy_speed_boost_100_coins">Buy Speed Boost - 100 coins</string>
    <string name="coins_0">Coins: 0</string>
    <string name="game_shop">Game Shop</string>
    <string name="score_0_health_3">Score: 0 | Health: 3</string>
    <string name="back_to_menu">⬅️ Back to Menu</string>
</resources>